# beautiful-wallet-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: address.rs  main.rs  output.rs  pattern.rs  wallet.rs
