[package]
name = "beautiful-wallet"
version = "0.1.0"
edition = "2021"
description = "Fast, parallel BIP39 vanity Ethereum/Bitcoin wallet miner — a Rust port of beautiful-wallet"
license = "MIT"
repository = "https://github.com/GeneralD/beautiful-wallet-rs"
readme = "README.md"

[[bin]]
name = "beautiful-wallet"
path = "src/main.rs"

[dependencies]
bip39 = "2"
bip32 = "0.5"
ring = "0.17"
secp256k1 = { version = "0.30", features = ["std"] }
tiny-keccak = { version = "2", features = ["keccak"] }
sha2 = "0.10"
ripemd = "0.1"
bs58 = { version = "0.5", features = ["check"] }
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
